2005-04-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* CDebugModelPresentation.java
	* ICDebugHelpContextIds.java
	* CDebugPreferencePage.java
	* PreferenceMessages.properties
	* SourcePreferencePage.java
	* AddContainerAction.java: new
	* AddSourceContainerDialog.java: new
	* DownAction.java: new
	* EditContainerAction.java: new
	* MappingSourceContainerBrowser.java
	* PathMappingDialog.java
	* RemoveAction.java: new
	* SourceContainerAction.java: new
	* SourceContainerLabelProvider.java: new
	* SourceContainerViewer.java: new
	* SourceContainerWorkbenchAdapter.java
	* SourceLookupUIMessages.java: new
	* SourceLookupUIMessages.properties: new
	* UpAction.java: new
	* CDebugUIPlugin.java
	* DefaultSourceLocator.java
	* OldDefaultSourceLocator.java: new
	* plugin.properties

2005-04-12 Mikhail Khodjaiants
	Bug 91155: Wrong icon for "Restart".
	* icons/dlcl16/restart.gif
	* icons/elcl16/restart.gif

2005-04-07 Mikhail Khodjaiants
	Applied patch from Dave Daoust (new images).

2005-03-21 Mikhail Khodjaiants
	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
	* icons/full/obj16/mapentry_obj.gif: new
	* icons/full/obj16/mapping_obj.gif: new
	* CDebugImages.java
	* CDebugModelPresentation.java
	* ICDebugHelpContextIds.java
	* src/org/eclipse/cdt/debug/internal/ui/sourcelookup: new package
	* MappingSourceContainerBrowser.java: new
	* PathMappingDialog.java: new
	* SourceContainerAdapterFactory.java: new
	* SourceContainerWorkbenchAdapter.java: new
	* plugin.properties
	* plugin.xml

2005-03-08 Mikhail Khodjaiants
	Removed deprecated "WorkbenchHelp" references.
	* CBreakpointPropertiesRulerAction.java
	* EnableDisableBreakpointRulerAction.java
	* ToggleBreakpointRulerAction.java
	* ToggleDetailPaneAction.java
	* CDebugPreferencePage.java
	* SourcePreferencePage.java

2005-02-25 Mikhail Khodjaiants