@@ -1,4 +1,11 @@
 2005-04-21 Mikhail Khodjaiants
+	Replaced deprecated methods.
+	* CBreakpointPropertiesAction.java
+	* CBreakpointPropertiesRulerAction.java
+	* ModulesPropertiesActionDelegate.java
+	* SignalPropertiesActionDelegate.java
+
+2005-04-21 Mikhail Khodjaiants
 	Bug 80175: Replace the CDT source lookup by the source lookup provided by Eclipse platform.
 	* CDebugModelPresentation.java
 	* ICDebugHelpContextIds.java
